[gd_scene load_steps=35 format=3 uid="uid://bcoioblesr22e"]

[ext_resource type="Script" path="res://scenes/results/ResultUI.gd" id="1_p14af"]
[ext_resource type="Texture2D" uid="uid://c0ikmcsba2msv" path="res://assets/gui/playground_buttons.png" id="2_bc0yl"]
[ext_resource type="Texture2D" uid="uid://gk7udv2vih6r" path="res://assets/white.png" id="2_ffygg"]
[ext_resource type="Texture2D" uid="uid://i6nt6wwqdq7s" path="res://assets/gui/result_buttons.png" id="3_limvo"]
[ext_resource type="PackedScene" uid="uid://duebklrl317w2" path="res://scenes/general/SwitchButton.tscn" id="5_comce"]
[ext_resource type="PackedScene" uid="uid://d02voib3j3r1l" path="res://scenes/results/SizeOptions.tscn" id="5_ok3dt"]
[ext_resource type="PackedScene" uid="uid://eeubmpoydn2u" path="res://scenes/file-contact/MyFileDialog.tscn" id="6_i4mu4"]
[ext_resource type="PackedScene" uid="uid://mtu0mxcjwc41" path="res://scenes/color-options/ColorSliders.tscn" id="8_bgnmw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fmh57"]
atlas = ExtResource("3_limvo")
region = Rect2(0, 320, 32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_wf1g5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dieuj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0s43s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sw2vj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_75thn"]
atlas = ExtResource("3_limvo")
region = Rect2(32, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlc14"]
atlas = ExtResource("3_limvo")
region = Rect2(0, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxxko"]
atlas = ExtResource("3_limvo")
region = Rect2(32, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_odk1e"]
atlas = ExtResource("3_limvo")
region = Rect2(0, 512, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_twkmr"]
atlas = ExtResource("3_limvo")
region = Rect2(0, 544, 32, 32)

[sub_resource type="InputEventKey" id="InputEventKey_1kcjd"]
device = -1
keycode = 67
unicode = 99

[sub_resource type="Shortcut" id="Shortcut_jbswu"]
events = [SubResource("InputEventKey_1kcjd")]

[sub_resource type="AtlasTexture" id="AtlasTexture_yl1cn"]
atlas = ExtResource("2_bc0yl")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_407ms"]
atlas = ExtResource("2_bc0yl")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cncu8"]
atlas = ExtResource("2_bc0yl")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hktmc"]
atlas = ExtResource("3_limvo")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lmy4"]
atlas = ExtResource("3_limvo")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_akdnx"]
atlas = ExtResource("3_limvo")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb1ir"]
atlas = ExtResource("3_limvo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxkup"]
atlas = ExtResource("3_limvo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ur5h"]
atlas = ExtResource("3_limvo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_abqm7"]
atlas = ExtResource("3_limvo")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adciy"]
atlas = ExtResource("3_limvo")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jvvs"]
atlas = ExtResource("3_limvo")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nraaw"]
atlas = ExtResource("3_limvo")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06psx"]
atlas = ExtResource("3_limvo")
region = Rect2(32, 32, 32, 32)

[node name="ResultUI" type="MarginContainer"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_p14af")

[node name="Columns" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Left" type="VBoxContainer" parent="Columns"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Center" type="MarginContainer" parent="Columns/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="ResultBackground" type="TextureRect" parent="Columns/Left/Center"]
layout_mode = 2
texture = ExtResource("2_ffygg")

[node name="Result" type="TextureRect" parent="Columns/Left/Center"]
layout_mode = 2
tooltip_text = "current fractal"
texture = ExtResource("2_ffygg")
flip_v = true

[node name="Bottom" type="MarginContainer" parent="Columns/Left"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2

[node name="Lines" type="GridContainer" parent="Columns/Left/Bottom"]
layout_mode = 2
columns = 4

[node name="PointTexture1" type="TextureRect" parent="Columns/Left/Bottom/Lines"]
layout_mode = 2
tooltip_text = "0 points"
texture = SubResource("AtlasTexture_fmh57")

[node name="PointSlider" type="HSlider" parent="Columns/Left/Bottom/Lines"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "change point limit"
max_value = 1e+06
value = 500000.0

[node name="ActualValueSlider" type="HSlider" parent="Columns/Left/Bottom/Lines/PointSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_icons/tick = SubResource("PlaceholderTexture2D_wf1g5")
theme_override_styles/slider = SubResource("StyleBoxEmpty_dieuj")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_0s43s")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_sw2vj")
value = 20.0
editable = false
scrollable = false

[node name="PointTexture2" type="TextureRect" parent="Columns/Left/Bottom/Lines"]
layout_mode = 2
tooltip_text = "1000000 points"
texture = SubResource("AtlasTexture_75thn")

[node name="PointLineEdit" type="LineEdit" parent="Columns/Left/Bottom/Lines"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
placeholder_text = "123456789"

[node name="DelayTexture1" type="TextureRect" parent="Columns/Left/Bottom/Lines"]
layout_mode = 2
tooltip_text = "draw all points"
texture = SubResource("AtlasTexture_vlc14")

[node name="DelaySlider" type="HSlider" parent="Columns/Left/Bottom/Lines"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "change amount of points which will be calculated before drawing to avoid \"stray points\""
value = 10.0

[node name="DelayTexture2" type="TextureRect" parent="Columns/Left/Bottom/Lines"]
layout_mode = 2
tooltip_text = "delay of 100 points"
texture = SubResource("AtlasTexture_xxxko")

[node name="Sep" type="HBoxContainer" parent="Columns/Left/Bottom/Lines"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="DelayLineEdit" type="LineEdit" parent="Columns/Left/Bottom/Lines/Sep"]
layout_mode = 2
placeholder_text = "15"

[node name="ReusingLastPointButton" parent="Columns/Left/Bottom/Lines/Sep" instance=ExtResource("5_comce")]
layout_mode = 2
tooltip_ = "re-use the last calculated point for new calculations"
tooltip_ger = "Wiederbenutzung oder Neustart des Chaosspiels in jedem Frame"
tex_on = SubResource("AtlasTexture_odk1e")
tex_off = SubResource("AtlasTexture_twkmr")
reverse_textures = null

[node name="Right" type="MarginContainer" parent="Columns"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Top" type="MarginContainer" parent="Columns/Right"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
mouse_filter = 2

[node name="Main" type="VBoxContainer" parent="Columns/Right/Top"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 2

[node name="ColorButton" type="TextureButton" parent="Columns/Right/Top/Main"]
layout_mode = 2
tooltip_text = "change background color"
shortcut = SubResource("Shortcut_jbswu")
texture_normal = SubResource("AtlasTexture_yl1cn")
texture_pressed = SubResource("AtlasTexture_407ms")
texture_hover = SubResource("AtlasTexture_cncu8")

[node name="ShareButton" type="TextureButton" parent="Columns/Right/Top/Main"]
layout_mode = 2
tooltip_text = "share image in gallery"
texture_normal = SubResource("AtlasTexture_hktmc")
texture_pressed = SubResource("AtlasTexture_6lmy4")
texture_hover = SubResource("AtlasTexture_akdnx")

[node name="SaveButton" type="TextureButton" parent="Columns/Right/Top/Main"]
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "save image locally"
texture_normal = SubResource("AtlasTexture_mb1ir")
texture_pressed = SubResource("AtlasTexture_vxkup")
texture_hover = SubResource("AtlasTexture_3ur5h")

[node name="CenterButton" parent="Columns/Right/Top/Main" instance=ExtResource("5_comce")]
layout_mode = 2
tooltip_ = "change view"
tooltip_ger = "\"Ã¤ndere Bildausschnitt"
tex_on = SubResource("AtlasTexture_abqm7")
tex_off = SubResource("AtlasTexture_adciy")
reverse_textures = null

[node name="SizeButton" type="TextureButton" parent="Columns/Right/Top/Main"]
layout_mode = 2
tooltip_text = "change image size"
texture_normal = SubResource("AtlasTexture_6jvvs")
texture_pressed = SubResource("AtlasTexture_nraaw")
texture_hover = SubResource("AtlasTexture_06psx")

[node name="SaveFileDialog" parent="Columns/Right/Top" instance=ExtResource("6_i4mu4")]
visible = false

[node name="SizeOptions" parent="." instance=ExtResource("5_ok3dt")]
layout_mode = 2
mouse_filter = 2

[node name="ColorSliders" parent="." instance=ExtResource("8_bgnmw")]
visible = false
layout_mode = 2
size_flags_vertical = 8
BACKGROUND_COLOR_SLIDER = true

[connection signal="drag_ended" from="Columns/Left/Bottom/Lines/PointSlider" to="." method="_on_point_slider_drag_ended"]
[connection signal="drag_started" from="Columns/Left/Bottom/Lines/PointSlider" to="." method="_on_point_slider_drag_started"]
[connection signal="value_changed" from="Columns/Left/Bottom/Lines/PointSlider" to="." method="_on_point_slider_value_changed"]
[connection signal="text_submitted" from="Columns/Left/Bottom/Lines/PointLineEdit" to="." method="_on_point_line_edit_text_submitted"]
[connection signal="value_changed" from="Columns/Left/Bottom/Lines/DelaySlider" to="." method="_on_delay_slider_value_changed"]
[connection signal="text_submitted" from="Columns/Left/Bottom/Lines/Sep/DelayLineEdit" to="." method="_on_delay_line_edit_text_submitted"]
[connection signal="pressed" from="Columns/Left/Bottom/Lines/Sep/ReusingLastPointButton" to="." method="_on_reusing_last_point_button_pressed"]
[connection signal="pressed" from="Columns/Right/Top/Main/ColorButton" to="." method="_on_color_button_pressed"]
[connection signal="pressed" from="Columns/Right/Top/Main/ShareButton" to="." method="_on_share_button_pressed"]
[connection signal="pressed" from="Columns/Right/Top/Main/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Columns/Right/Top/Main/CenterButton" to="." method="_on_center_button_pressed"]
[connection signal="pressed" from="Columns/Right/Top/Main/SizeButton" to="." method="_on_size_button_pressed"]
[connection signal="path_selected" from="Columns/Right/Top/SaveFileDialog" to="." method="_on_save_file_dialog_path_selected"]
[connection signal="value_changed" from="SizeOptions" to="." method="_on_size_options_value_changed"]
[connection signal="color_changed" from="ColorSliders" to="." method="_on_color_sliders_color_changed"]
[connection signal="finished" from="ColorSliders" to="." method="_on_color_sliders_finished"]
